k8s/namespaces.k8s.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: memegen-prod
  labels:
    name: memegen-prod
