k8s/memegen.api.yml
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: memegen-prod
  labels:
    app: api
    tier: backend
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 32587
  selector:
    app: api
    tier: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: memegen-prod
  name: api-dep
spec:
  selector:
    matchLabels:
        app: api
        tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: api
        tier: backend
        config_ver: "1"         # HACK: to update deployment even if image's version doesn't change
    spec:
      containers:
      - name: api
        image: api:${BUILD_NUMBER}        # to be replaced by jenkins' kubernetes-cd plugin
        imagePullPolicy: Never
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
          - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health-check
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health-check
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
